--- a/sitl.diputados.gob.mx/c15943151825dcacc0476d1d5611bbc7e10a7fb4.yml
+++ b/sitl.diputados.gob.mx/c15943151825dcacc0476d1d5611bbc7e10a7fb4.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 06:58:21 GMT
+    - Mon, 11 Dec 2017 21:14:50 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '9620'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 07:01:57 GMT
+recorded_at: Mon, 11 Dec 2017 21:18:36 GMT
