--- a/sitl.diputados.gob.mx/89ea44b28f238169e5ab585546c443abf3aa977c.yml
+++ b/sitl.diputados.gob.mx/89ea44b28f238169e5ab585546c443abf3aa977c.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 07:08:19 GMT
+    - Mon, 11 Dec 2017 21:20:51 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '10949'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 07:11:55 GMT
+recorded_at: Mon, 11 Dec 2017 21:24:38 GMT
