--- a/sitl.diputados.gob.mx/60044711d9a438596903fc1174c84e5028f61081.yml
+++ b/sitl.diputados.gob.mx/60044711d9a438596903fc1174c84e5028f61081.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 07:20:00 GMT
+    - Mon, 11 Dec 2017 21:30:11 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '9600'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 07:23:36 GMT
+recorded_at: Mon, 11 Dec 2017 21:33:58 GMT
