--- a/sitl.diputados.gob.mx/65f8a68768324b152f31fda1bbdfadd64c911219.yml
+++ b/sitl.diputados.gob.mx/65f8a68768324b152f31fda1bbdfadd64c911219.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 07:24:08 GMT
+    - Mon, 11 Dec 2017 21:33:34 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '11166'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 07:27:44 GMT
+recorded_at: Mon, 11 Dec 2017 21:37:21 GMT
