--- a/sitl.diputados.gob.mx/c1fb3081d598c73e8026eae8018acb6a75540fb2.yml
+++ b/sitl.diputados.gob.mx/c1fb3081d598c73e8026eae8018acb6a75540fb2.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 07:26:16 GMT
+    - Mon, 11 Dec 2017 21:35:30 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '8226'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 07:29:52 GMT
+recorded_at: Mon, 11 Dec 2017 21:39:17 GMT
