--- a/sitl.diputados.gob.mx/5e100d90ea3622618d0b513ee8de716604c4fdb9.yml
+++ b/sitl.diputados.gob.mx/5e100d90ea3622618d0b513ee8de716604c4fdb9.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 07:35:42 GMT
+    - Mon, 11 Dec 2017 21:45:05 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '16446'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 07:39:19 GMT
+recorded_at: Mon, 11 Dec 2017 21:48:51 GMT
