--- a/sitl.diputados.gob.mx/fb9ec163f62ce241cd7378bfe30922fca53131b8.yml
+++ b/sitl.diputados.gob.mx/fb9ec163f62ce241cd7378bfe30922fca53131b8.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 07:42:51 GMT
+    - Mon, 11 Dec 2017 21:51:27 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '12074'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 07:46:27 GMT
+recorded_at: Mon, 11 Dec 2017 21:55:13 GMT
