--- a/sitl.diputados.gob.mx/7da4b7f13356909c874a34090432ddb4eaec35a8.yml
+++ b/sitl.diputados.gob.mx/7da4b7f13356909c874a34090432ddb4eaec35a8.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 07:43:56 GMT
+    - Mon, 11 Dec 2017 21:52:13 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '10479'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 07:47:32 GMT
+recorded_at: Mon, 11 Dec 2017 21:56:00 GMT
