--- a/sitl.diputados.gob.mx/52d9b930d335f5c0d8bf796632757e58d4197471.yml
+++ b/sitl.diputados.gob.mx/52d9b930d335f5c0d8bf796632757e58d4197471.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 07:44:45 GMT
+    - Mon, 11 Dec 2017 21:52:52 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '12663'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 07:48:21 GMT
+recorded_at: Mon, 11 Dec 2017 21:56:38 GMT
