--- a/sitl.diputados.gob.mx/2040aec0669ca2430445d73de345419d295935d0.yml
+++ b/sitl.diputados.gob.mx/2040aec0669ca2430445d73de345419d295935d0.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 07:48:32 GMT
+    - Mon, 11 Dec 2017 21:56:10 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '13427'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 07:52:08 GMT
+recorded_at: Mon, 11 Dec 2017 21:59:56 GMT
