--- a/sitl.diputados.gob.mx/434ae2da16e0b7d2fb111802d42763f485d9d1f4.yml
+++ b/sitl.diputados.gob.mx/434ae2da16e0b7d2fb111802d42763f485d9d1f4.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 08:06:26 GMT
+    - Mon, 11 Dec 2017 22:14:29 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '13467'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 08:10:02 GMT
+recorded_at: Mon, 11 Dec 2017 22:18:15 GMT
