--- a/sitl.diputados.gob.mx/4fdede647e0c35249dc70a98e73cb6965c3a5b5e.yml
+++ b/sitl.diputados.gob.mx/4fdede647e0c35249dc70a98e73cb6965c3a5b5e.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 08:06:49 GMT
+    - Mon, 11 Dec 2017 22:14:47 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '8673'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 08:10:25 GMT
+recorded_at: Mon, 11 Dec 2017 22:18:34 GMT
