--- a/sitl.diputados.gob.mx/e4898dbf3171e65eeb9d6fb32c7edc7724e46efe.yml
+++ b/sitl.diputados.gob.mx/e4898dbf3171e65eeb9d6fb32c7edc7724e46efe.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 08:09:06 GMT
+    - Mon, 11 Dec 2017 22:16:53 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '11582'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 08:12:42 GMT
+recorded_at: Mon, 11 Dec 2017 22:20:39 GMT
