--- a/sitl.diputados.gob.mx/08e92df8376aab5b1cf29acdb602385036d3c99d.yml
+++ b/sitl.diputados.gob.mx/08e92df8376aab5b1cf29acdb602385036d3c99d.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 08:15:41 GMT
+    - Mon, 11 Dec 2017 22:23:21 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '12613'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 08:19:18 GMT
+recorded_at: Mon, 11 Dec 2017 22:27:07 GMT
