--- a/sitl.diputados.gob.mx/428271afdb84d935b05f2818434dd109f531df08.yml
+++ b/sitl.diputados.gob.mx/428271afdb84d935b05f2818434dd109f531df08.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 08:26:05 GMT
+    - Mon, 11 Dec 2017 22:34:45 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '10818'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 08:29:42 GMT
+recorded_at: Mon, 11 Dec 2017 22:38:31 GMT
