--- a/sitl.diputados.gob.mx/09219ffee3ebec9f45f08fcedea271e53350267d.yml
+++ b/sitl.diputados.gob.mx/09219ffee3ebec9f45f08fcedea271e53350267d.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 08:29:18 GMT
+    - Mon, 11 Dec 2017 22:37:52 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '18478'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 08:32:55 GMT
+recorded_at: Mon, 11 Dec 2017 22:41:39 GMT
