--- a/sitl.diputados.gob.mx/1a3f5227792cf91c4651f75c6009cd97d4148331.yml
+++ b/sitl.diputados.gob.mx/1a3f5227792cf91c4651f75c6009cd97d4148331.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 08:44:27 GMT
+    - Mon, 11 Dec 2017 22:55:09 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '11476'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 08:48:03 GMT
+recorded_at: Mon, 11 Dec 2017 22:58:56 GMT
