--- a/sitl.diputados.gob.mx/effa5dec3273e32c7c919ff6b4417611d4bbfd07.yml
+++ b/sitl.diputados.gob.mx/effa5dec3273e32c7c919ff6b4417611d4bbfd07.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 08:45:45 GMT
+    - Mon, 11 Dec 2017 22:56:48 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '12482'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 08:49:22 GMT
+recorded_at: Mon, 11 Dec 2017 23:00:34 GMT
