--- a/sitl.diputados.gob.mx/7c8967a76e9eb20b632f1fac9ad5c38c2a9dbc57.yml
+++ b/sitl.diputados.gob.mx/7c8967a76e9eb20b632f1fac9ad5c38c2a9dbc57.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 08:48:08 GMT
+    - Tue, 12 Dec 2017 05:21:21 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '10753'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 08:51:45 GMT
+recorded_at: Tue, 12 Dec 2017 05:25:10 GMT
