--- a/sitl.diputados.gob.mx/15ce10c72119b749978d32bdad7ff2728d1b1364.yml
+++ b/sitl.diputados.gob.mx/15ce10c72119b749978d32bdad7ff2728d1b1364.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 08:48:34 GMT
+    - Tue, 12 Dec 2017 05:21:49 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '15873'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 08:52:11 GMT
+recorded_at: Tue, 12 Dec 2017 05:25:37 GMT
