--- a/sitl.diputados.gob.mx/d2718e4b490bc47dd6c35e65f9e8a4737c7574e0.yml
+++ b/sitl.diputados.gob.mx/d2718e4b490bc47dd6c35e65f9e8a4737c7574e0.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 08:50:24 GMT
+    - Tue, 12 Dec 2017 05:24:36 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '14362'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 08:54:01 GMT
+recorded_at: Tue, 12 Dec 2017 05:28:25 GMT
