--- a/sitl.diputados.gob.mx/12be3fc6016c61ba5a4eef680f15c908f79ccde1.yml
+++ b/sitl.diputados.gob.mx/12be3fc6016c61ba5a4eef680f15c908f79ccde1.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 08:53:46 GMT
+    - Tue, 12 Dec 2017 05:28:08 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '11898'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 08:57:22 GMT
+recorded_at: Tue, 12 Dec 2017 05:31:57 GMT
