--- a/sitl.diputados.gob.mx/60c65c91a702eac5517261868e0c34cfdeca5d37.yml
+++ b/sitl.diputados.gob.mx/60c65c91a702eac5517261868e0c34cfdeca5d37.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 08:58:27 GMT
+    - Tue, 12 Dec 2017 05:34:09 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '8393'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:02:03 GMT
+recorded_at: Tue, 12 Dec 2017 05:37:58 GMT
