--- a/sitl.diputados.gob.mx/48278fb4a8c2a05bc90432b08a263b96609c0a0f.yml
+++ b/sitl.diputados.gob.mx/48278fb4a8c2a05bc90432b08a263b96609c0a0f.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:01:10 GMT
+    - Tue, 12 Dec 2017 05:37:16 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '11198'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:04:47 GMT
+recorded_at: Tue, 12 Dec 2017 05:41:05 GMT
