--- a/sitl.diputados.gob.mx/7f681f20d6e43e22d9c10b6374e3e7feb83622a2.yml
+++ b/sitl.diputados.gob.mx/7f681f20d6e43e22d9c10b6374e3e7feb83622a2.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:01:53 GMT
+    - Tue, 12 Dec 2017 05:38:03 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '10176'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:05:29 GMT
+recorded_at: Tue, 12 Dec 2017 05:41:51 GMT
