--- a/sitl.diputados.gob.mx/3fd1762a027b274ba2c3bc7a54c8e2744b8295a2.yml
+++ b/sitl.diputados.gob.mx/3fd1762a027b274ba2c3bc7a54c8e2744b8295a2.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:04:11 GMT
+    - Tue, 12 Dec 2017 05:39:54 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '14900'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:07:47 GMT
+recorded_at: Tue, 12 Dec 2017 05:43:42 GMT
