--- a/sitl.diputados.gob.mx/5dfa9a602d3bbf19736a5580e9bac964433e4234.yml
+++ b/sitl.diputados.gob.mx/5dfa9a602d3bbf19736a5580e9bac964433e4234.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:08:24 GMT
+    - Tue, 12 Dec 2017 05:44:53 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '11227'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:12:01 GMT
+recorded_at: Tue, 12 Dec 2017 05:48:41 GMT
