--- a/sitl.diputados.gob.mx/df893b841ae9d876380940846c9452397618f714.yml
+++ b/sitl.diputados.gob.mx/df893b841ae9d876380940846c9452397618f714.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:16:45 GMT
+    - Tue, 12 Dec 2017 05:54:41 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '10316'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:20:21 GMT
+recorded_at: Tue, 12 Dec 2017 05:58:30 GMT
