--- a/sitl.diputados.gob.mx/5b0e248897b3d93cd6563921c2bdc38da013c52e.yml
+++ b/sitl.diputados.gob.mx/5b0e248897b3d93cd6563921c2bdc38da013c52e.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:18:47 GMT
+    - Tue, 12 Dec 2017 05:56:28 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '8851'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:22:24 GMT
+recorded_at: Tue, 12 Dec 2017 06:00:17 GMT
