--- a/sitl.diputados.gob.mx/c929a8880286633d91f35d7c3cd81bb1ef785cc5.yml
+++ b/sitl.diputados.gob.mx/c929a8880286633d91f35d7c3cd81bb1ef785cc5.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:22:52 GMT
+    - Tue, 12 Dec 2017 05:59:51 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '13346'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:26:29 GMT
+recorded_at: Tue, 12 Dec 2017 06:03:40 GMT
