--- a/sitl.diputados.gob.mx/34c25c12c1883691568b0bf007ccf268d33e31e9.yml
+++ b/sitl.diputados.gob.mx/34c25c12c1883691568b0bf007ccf268d33e31e9.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:24:40 GMT
+    - Tue, 12 Dec 2017 06:01:08 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '13402'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:28:17 GMT
+recorded_at: Tue, 12 Dec 2017 06:04:57 GMT
