--- a/sitl.diputados.gob.mx/c2dd8ad98bb76c72789d40141f9dfcddeefa3dbe.yml
+++ b/sitl.diputados.gob.mx/c2dd8ad98bb76c72789d40141f9dfcddeefa3dbe.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:28:59 GMT
+    - Tue, 12 Dec 2017 06:06:05 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '11612'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:32:36 GMT
+recorded_at: Tue, 12 Dec 2017 06:09:54 GMT
