--- a/sitl.diputados.gob.mx/db0fe642a766a74048bd88c0f333e4fd24372dad.yml
+++ b/sitl.diputados.gob.mx/db0fe642a766a74048bd88c0f333e4fd24372dad.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:29:51 GMT
+    - Tue, 12 Dec 2017 06:07:01 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '10295'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:33:27 GMT
+recorded_at: Tue, 12 Dec 2017 06:10:50 GMT
