--- a/sitl.diputados.gob.mx/9fa679053db1af40870a32c68e94179c28524ed2.yml
+++ b/sitl.diputados.gob.mx/9fa679053db1af40870a32c68e94179c28524ed2.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:34:00 GMT
+    - Tue, 12 Dec 2017 06:11:36 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '12862'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:37:37 GMT
+recorded_at: Tue, 12 Dec 2017 06:15:24 GMT
