--- a/sitl.diputados.gob.mx/b783d266a7b0270e96fa68b5c2cb7e37fd3f696a.yml
+++ b/sitl.diputados.gob.mx/b783d266a7b0270e96fa68b5c2cb7e37fd3f696a.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:35:18 GMT
+    - Tue, 12 Dec 2017 06:13:42 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '9021'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:38:55 GMT
+recorded_at: Tue, 12 Dec 2017 06:17:31 GMT
