--- a/sitl.diputados.gob.mx/8d13380177a7909ebcabab839dc44d7b0b1bf435.yml
+++ b/sitl.diputados.gob.mx/8d13380177a7909ebcabab839dc44d7b0b1bf435.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:36:57 GMT
+    - Tue, 12 Dec 2017 06:15:16 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '8707'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:40:34 GMT
+recorded_at: Tue, 12 Dec 2017 06:19:04 GMT
