--- a/sitl.diputados.gob.mx/fd00e899b85116f01bb9f17915e307c4fc6fdedd.yml
+++ b/sitl.diputados.gob.mx/fd00e899b85116f01bb9f17915e307c4fc6fdedd.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:37:24 GMT
+    - Tue, 12 Dec 2017 06:15:52 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '11505'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:41:01 GMT
+recorded_at: Tue, 12 Dec 2017 06:19:41 GMT
