--- a/sitl.diputados.gob.mx/b55bdd20e212dac18bb3d7e88cead95bf19fa002.yml
+++ b/sitl.diputados.gob.mx/b55bdd20e212dac18bb3d7e88cead95bf19fa002.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:40:59 GMT
+    - Tue, 12 Dec 2017 06:19:48 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '14838'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:44:37 GMT
+recorded_at: Tue, 12 Dec 2017 06:23:37 GMT
