--- a/sitl.diputados.gob.mx/d77706bee106ee3360509027ccb99fe5a5ee9c78.yml
+++ b/sitl.diputados.gob.mx/d77706bee106ee3360509027ccb99fe5a5ee9c78.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:42:56 GMT
+    - Tue, 12 Dec 2017 06:21:34 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '20655'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:46:33 GMT
+recorded_at: Tue, 12 Dec 2017 06:25:22 GMT
