--- a/sitl.diputados.gob.mx/51e4a4018551fd81739cbfec8f745e1e020f05dd.yml
+++ b/sitl.diputados.gob.mx/51e4a4018551fd81739cbfec8f745e1e020f05dd.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:50:16 GMT
+    - Tue, 12 Dec 2017 06:30:40 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '9878'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:53:53 GMT
+recorded_at: Tue, 12 Dec 2017 06:34:29 GMT
