--- a/sitl.diputados.gob.mx/4915f3178cbb96b1846b41763050fc2d264fec4c.yml
+++ b/sitl.diputados.gob.mx/4915f3178cbb96b1846b41763050fc2d264fec4c.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:50:39 GMT
+    - Tue, 12 Dec 2017 06:31:13 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '9642'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:54:15 GMT
+recorded_at: Tue, 12 Dec 2017 06:35:02 GMT
