--- a/sitl.diputados.gob.mx/9c7300c8cbac528899f85af580991129f65c8e87.yml
+++ b/sitl.diputados.gob.mx/9c7300c8cbac528899f85af580991129f65c8e87.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 09:52:12 GMT
+    - Tue, 12 Dec 2017 06:32:56 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '13366'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 09:55:49 GMT
+recorded_at: Tue, 12 Dec 2017 06:36:45 GMT
