--- a/sitl.diputados.gob.mx/d04db29a0f8cf1b5d520db902354a9e3b6d93d0e.yml
+++ b/sitl.diputados.gob.mx/d04db29a0f8cf1b5d520db902354a9e3b6d93d0e.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 10:04:15 GMT
+    - Tue, 12 Dec 2017 06:45:49 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '11287'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 10:07:52 GMT
+recorded_at: Tue, 12 Dec 2017 06:49:38 GMT
