--- a/sitl.diputados.gob.mx/7cf39d2eb98f06484ba4887d83dc640a08cec788.yml
+++ b/sitl.diputados.gob.mx/7cf39d2eb98f06484ba4887d83dc640a08cec788.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 10:04:49 GMT
+    - Tue, 12 Dec 2017 06:46:17 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '8756'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 10:08:26 GMT
+recorded_at: Tue, 12 Dec 2017 06:50:05 GMT
