--- a/sitl.diputados.gob.mx/edaa70817ade6f5f7a9a80c0d45b22e4399bd9e2.yml
+++ b/sitl.diputados.gob.mx/edaa70817ade6f5f7a9a80c0d45b22e4399bd9e2.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 10:07:50 GMT
+    - Tue, 12 Dec 2017 06:49:59 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '9954'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 10:11:27 GMT
+recorded_at: Tue, 12 Dec 2017 06:53:48 GMT
