--- a/sitl.diputados.gob.mx/dce1db7c650da543e75f8d43104a53226131f83b.yml
+++ b/sitl.diputados.gob.mx/dce1db7c650da543e75f8d43104a53226131f83b.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 10:13:05 GMT
+    - Tue, 12 Dec 2017 06:55:20 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '12763'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 10:16:42 GMT
+recorded_at: Tue, 12 Dec 2017 06:59:09 GMT
