--- a/sitl.diputados.gob.mx/17e62a6cb380cf193fbb834d490bb5ce1ffdc55a.yml
+++ b/sitl.diputados.gob.mx/17e62a6cb380cf193fbb834d490bb5ce1ffdc55a.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 10:16:49 GMT
+    - Tue, 12 Dec 2017 06:59:42 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '15078'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 10:20:25 GMT
+recorded_at: Tue, 12 Dec 2017 07:03:31 GMT
