--- a/sitl.diputados.gob.mx/2ecb237a806a6ca4f002612066a3ac87ba0e1630.yml
+++ b/sitl.diputados.gob.mx/2ecb237a806a6ca4f002612066a3ac87ba0e1630.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 10:17:45 GMT
+    - Tue, 12 Dec 2017 07:00:42 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '9938'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 10:21:22 GMT
+recorded_at: Tue, 12 Dec 2017 07:04:31 GMT
