--- a/sitl.diputados.gob.mx/14c406e6fb1274415f641c0225236bfccc6b8a23.yml
+++ b/sitl.diputados.gob.mx/14c406e6fb1274415f641c0225236bfccc6b8a23.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 10:18:15 GMT
+    - Tue, 12 Dec 2017 07:01:23 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '14657'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 10:21:52 GMT
+recorded_at: Tue, 12 Dec 2017 07:05:12 GMT
