--- a/sitl.diputados.gob.mx/876aeee1126f2b811d57990a6f9941d5c7ec963c.yml
+++ b/sitl.diputados.gob.mx/876aeee1126f2b811d57990a6f9941d5c7ec963c.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 10:26:16 GMT
+    - Tue, 12 Dec 2017 07:11:04 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '12720'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 10:29:54 GMT
+recorded_at: Tue, 12 Dec 2017 07:14:53 GMT
