--- a/sitl.diputados.gob.mx/bea9ebf36762ecbb3b0abecb9d91e62c15e4af9c.yml
+++ b/sitl.diputados.gob.mx/bea9ebf36762ecbb3b0abecb9d91e62c15e4af9c.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 10:29:04 GMT
+    - Tue, 12 Dec 2017 07:13:18 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '10612'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 10:32:41 GMT
+recorded_at: Tue, 12 Dec 2017 07:17:07 GMT
