--- a/sitl.diputados.gob.mx/786fdd368ba61be42029fb2b9666daea25a3b513.yml
+++ b/sitl.diputados.gob.mx/786fdd368ba61be42029fb2b9666daea25a3b513.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 10:40:37 GMT
+    - Tue, 12 Dec 2017 07:24:51 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '9437'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 10:44:14 GMT
+recorded_at: Tue, 12 Dec 2017 07:28:40 GMT
