--- a/sitl.diputados.gob.mx/3dcfd3d688b92ea04c16eac022b2f6f10b5d6059.yml
+++ b/sitl.diputados.gob.mx/3dcfd3d688b92ea04c16eac022b2f6f10b5d6059.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 10:49:59 GMT
+    - Tue, 12 Dec 2017 07:33:39 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '8242'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 10:53:36 GMT
+recorded_at: Tue, 12 Dec 2017 07:37:28 GMT
