--- a/sitl.diputados.gob.mx/4daefa97ddb8cb27231f68a902255f9f1caacf0b.yml
+++ b/sitl.diputados.gob.mx/4daefa97ddb8cb27231f68a902255f9f1caacf0b.yml
@@ -18,16 +18,16 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 10 Dec 2017 10:50:42 GMT
+    - Tue, 12 Dec 2017 07:35:02 GMT
     Server:
     - Apache/2.2.3 (Unix) mod_ssl/2.2.3 OpenSSL/0.9.8d Zend Core/2.0.1 PHP/5.2.1
     X-Powered-By:
     - Zend Core/2.0.1 PHP/5.2.1
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html
+    Content-Length:
+    - '12967'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 10 Dec 2017 10:54:19 GMT
+recorded_at: Tue, 12 Dec 2017 07:38:52 GMT
